atoms/base-gnome: Update build order

--- a/packages/atoms/base-gnome/app-text-4.4/docbook-sgml-dtd/build.yaml
+++ b/packages/atoms/base-gnome/app-text-4.4/docbook-sgml-dtd/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: macaroni-funtoo-race12
+- name: docbook-sgml-dtd
   version: '>=0'
-  category: seed
+  category: app-text-4.0
