--- a/packages/atoms/base-gnome/app-text/docbook-xml-simple-dtd/build.yaml
+++ b/packages/atoms/base-gnome/app-text/docbook-xml-simple-dtd/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: macaroni-funtoo-race12
+- name: openjade
   version: '>=0'
-  category: seed
+  category: app-text
