seed/macaroni-funtoo-race13: Bump v.0.20230903+1

--- a/packages/seeds/macaroni-funtoo-race13/build.yaml
+++ b/packages/seeds/macaroni-funtoo-race13/build.yaml
@@ -79,7 +79,7 @@ steps:
   macaronictl env-update &&
   eval 'locale-gen || true' &&
   build-docbook-catalog &&
-  whip h eclass_db.db_fix_so perl.postinst &&a
+  whip h eclass_db.db_fix_so perl.postinst &&
   whip h qt5.qconfig_gen &&
   whip h sgml.update_catalog &&
   eselect rust set 1 &&
