--- a/portage-converter/base-tools.yml
+++ b/portage-converter/base-tools.yml
@@ -113,9 +113,42 @@ artefacts:
   - app-text/build-docbook-catalog
   - app-text/docbook-dsssl-stylesheets
   - app-text/manpager
-  - app-text/sgml-common
   - virtual/libelf
 
+- tree: packages/atoms/base-tools
+  mutations:
+    buildtime_deps:
+      packages:
+        - category: seed
+          name: macaroni-funtoo-race2
+  uses:
+    disabled:
+    - nios2
+    - sh
+  packages:
+  - app-text/sgml-common
+  finalizer:
+    shell:
+      - "/bin/bash"
+      - "-c"
+    install:
+      - >-
+        SGML_SOURCE_CATALOG="/etc/sgml/sgml-ent.cat"
+        SGML_CENTRALIZED_CATALOG="/usr/share/sgml/sgml-iso-entities-8879.1986/catalog"
+        whip h sgml.sgml_cat_install || true
+      - >-
+        SGML_SOURCE_CATALOG="/etc/sgml/sgml-docbook.cat"
+        SGML_CENTRALIZED_CATALOG="/etc/sgml/sgml-ent.cat"
+        whip h sgml.sgml_cat_install || true
+    uninstall:
+      - >-
+        SGML_SOURCE_CATALOG="/etc/sgml/sgml-ent.cat"
+        SGML_CENTRALIZED_CATALOG="/usr/share/sgml/sgml-iso-entities-8879.1986/catalog"
+        whip h sgml.sgml_cat_remove || true
+      - >-
+        SGML_SOURCE_CATALOG="/etc/sgml/sgml-docbook.cat"
+        SGML_CENTRALIZED_CATALOG="/etc/sgml/sgml-ent.cat"
+        whip h sgml.sgml_cat_remove || true
 
 - tree: packages/atoms/base-tools
   mutations:
