--- a/packages/atoms/xorg-base/x11-base/xorg-server/definition.yaml
+++ b/packages/atoms/xorg-base/x11-base/xorg-server/definition.yaml
@@ -1,5 +1,5 @@
 name: xorg-server
-version: 1.20.10
+version: 1.20.10+1
 category: x11-base
 use_flags:
 - -dmx
@@ -12,9 +12,17 @@ use_flags:
 - -x86-winnt
 - kdrive
 - udev
+- wayland
 - xephyr
+- xnest
 requires:
 - name: openssl
+  version: '>=0'
+  category: dev-libs
+- name: wayland
+  version: '>=0'
+  category: dev-libs
+- name: wayland-protocols
   version: '>=0'
   category: dev-libs
 - name: libepoxy
@@ -94,11 +102,12 @@ labels:
     x11-libs/xcb-util-renderutil x11-libs/xcb-util-wm ) !minimal? ( >=x11-libs/libX11-1.1.5
     >=x11-libs/libXext-1.0.5 >=media-libs/mesa-18[X(+),egl(+),gbm(+)] >=media-libs/libepoxy-1.5.4[X,egl(+)]
     ) udev? ( virtual/libudev:= ) unwind? ( sys-libs/libunwind:= ) >=x11-apps/xinit-1.3.3-r1
-    selinux? ( sys-process/audit sys-libs/libselinux:= ) systemd? ( sys-apps/dbus
-    sys-apps/systemd ) elogind? ( sys-apps/dbus sys-auth/elogind[pam] sys-libs/pam[elogind]
-    ) !!x11-drivers/nvidia-drivers[-libglvnd(+)] >=x11-base/xorg-proto-2018.4 >=x11-libs/xtrans-1.3.5
-  IUSE: dmx kdrive xephyr xnest xorg xvfb debug +elogind minimal selinux +suid systemd
-    test +udev unwind xcsecurity static-libs
+    wayland? ( >=dev-libs/wayland-1.3.0 media-libs/libepoxy >=dev-libs/wayland-protocols-1.1
+    ) selinux? ( sys-process/audit sys-libs/libselinux:= ) systemd? ( sys-apps/dbus
+    sys-apps/systemd ) elogind? ( sys-apps/dbus sys-auth/elogind[pam] ) !!x11-drivers/nvidia-drivers[-libglvnd(+)]
+    >=x11-base/xorg-proto-2018.4 >=x11-libs/xtrans-1.3.5
+  IUSE: dmx kdrive xephyr xnest xorg xvfb wayland debug +elogind minimal selinux +suid
+    systemd test +udev unwind xcsecurity static-libs
   RDEPEND: media-libs/libglvnd[X] dev-libs/openssl:0= >=x11-apps/iceauth-1.0.2 >=x11-apps/rgb-1.0.3
     >=x11-apps/xauth-1.0.3 x11-apps/xkbcomp >=x11-libs/libdrm-2.4.89 >=x11-libs/libpciaccess-0.12.901
     >=x11-libs/libXau-1.0.4 >=x11-libs/libXdmcp-1.0.2 >=x11-libs/libXfont2-2.0.1 >=x11-libs/libxkbfile-1.0.4
@@ -111,12 +120,12 @@ labels:
     x11-libs/xcb-util-renderutil x11-libs/xcb-util-wm ) !minimal? ( >=x11-libs/libX11-1.1.5
     >=x11-libs/libXext-1.0.5 >=media-libs/mesa-18[X(+),egl(+),gbm(+)] >=media-libs/libepoxy-1.5.4[X,egl(+)]
     ) udev? ( virtual/libudev:= ) unwind? ( sys-libs/libunwind:= ) >=x11-apps/xinit-1.3.3-r1
-    selinux? ( sys-process/audit sys-libs/libselinux:= ) systemd? ( sys-apps/dbus
-    sys-apps/systemd ) elogind? ( sys-apps/dbus sys-auth/elogind[pam] sys-libs/pam[elogind]
-    ) !!x11-drivers/nvidia-drivers[-libglvnd(+)] selinux? ( sec-policy/selinux-xserver
-    )
+    wayland? ( >=dev-libs/wayland-1.3.0 media-libs/libepoxy >=dev-libs/wayland-protocols-1.1
+    ) selinux? ( sys-process/audit sys-libs/libselinux:= ) systemd? ( sys-apps/dbus
+    sys-apps/systemd ) elogind? ( sys-apps/dbus sys-auth/elogind[pam] ) !!x11-drivers/nvidia-drivers[-libglvnd(+)]
+    selinux? ( sec-policy/selinux-xserver )
   emerge.packages: x11-base/xorg-server
-  kit: core-gl-kit
+  kit: geaaru-kit
   original.package.name: x11-base/xorg-server
   original.package.slot: "0"
-  original.package.version: 1.20.10-r6
+  original.package.version: 1.20.10-r7
