atoms/base-gnome2: Review build order

--- a/packages/atoms/base-gnome2/app-crypt/libsecret/build.yaml
+++ b/packages/atoms/base-gnome2/app-crypt/libsecret/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: macaroni-funtoo-race13
+- name: gst-plugins-opus
   version: '>=0'
-  category: seed
+  category: media-plugins-1.0
