--- a/packages/atoms/base-gnome2/gui-libs-1.0/wpebackend-fdo/build.yaml
+++ b/packages/atoms/base-gnome2/gui-libs-1.0/wpebackend-fdo/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: gst-plugins-opus
+- name: gnome-common
   version: '>=0'
-  category: media-plugins-1.0
+  category: gnome-base-3
