--- a/packages/atoms/base-gnome2/gnome-base-3/gnome-common/build.yaml
+++ b/packages/atoms/base-gnome2/gnome-base-3/gnome-common/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: macaroni-funtoo-race13
+- name: libsecret
   version: '>=0'
-  category: seed
+  category: app-crypt
