--- a/packages/atoms/base-gnome2/media-libs/libgphoto2/build.yaml
+++ b/packages/atoms/base-gnome2/media-libs/libgphoto2/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: macaroni-funtoo-race13
+- name: libusbmuxd
   version: '>=0'
-  category: seed
+  category: app-pda
