--- a/packages/atoms/base-gnome2/net-fs/samba/build.yaml
+++ b/packages/atoms/base-gnome2/net-fs/samba/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: ldb
+- name: libmtp
   version: '>=0'
-  category: sys-libs
+  category: media-libs
