gnome-base-2/librsvg: Bump v.2.48.8+1

--- a/packages/atoms/base-gtk2/gnome-base-2/librsvg/definition.yaml
+++ b/packages/atoms/base-gtk2/gnome-base-2/librsvg/definition.yaml
@@ -1,9 +1,10 @@
 name: librsvg
-version: 2.48.8
+version: 2.48.8+1
 category: gnome-base-2
 use_flags:
 - -vala
 - introspection
+- tools
 requires:
 - name: libcroco
   version: '>=0'
