--- a/packages/atoms/base-gnome2/x11-themes/adwaita-icon-theme/build.yaml
+++ b/packages/atoms/base-gnome2/x11-themes/adwaita-icon-theme/build.yaml
@@ -1,4 +1,7 @@
 prelude:
+# TEMPORARY fix until next race.
+- >-
+  USE="tools" emerge librsvg -j
 - |-
   export FEATURES="-sandbox -usersandbox -ipc-sandbox -pid-sandbox -network-sandbox" && \
   export JOBS={{ ( index .Values.labels "jobs" ) | default "3" }} && \
