media-libs-3.0/clutter-gst: Bump v.3.0.27+1

--- a/packages/atoms/base-gnome2/media-libs-3.0/clutter-gst/definition.yaml
+++ b/packages/atoms/base-gnome2/media-libs-3.0/clutter-gst/definition.yaml
@@ -1,9 +1,13 @@
 name: clutter-gst
-version: 3.0.27
+version: 3.0.27+1
 category: media-libs-3.0
 use_flags:
 - introspection
 - udev
+- X
+- egl
+- wayland
+- gtk
 requires:
 - name: clutter
   version: '>=0'
