net-fs/samba: Bump v.4.13.4+1

--- a/packages/atoms/base-gnome2/net-fs/samba/definition.yaml
+++ b/packages/atoms/base-gnome2/net-fs/samba/definition.yaml
@@ -1,5 +1,5 @@
 name: samba
-version: 4.13.4
+version: 4.13.4+1
 category: net-fs
 use_flags:
 - -addns
@@ -26,6 +26,8 @@ use_flags:
 - system-heimdal
 - system-mitkrb5
 - zeroconf
+- quota
+- winbind
 requires:
 - name: libarchive
   version: '>=0'
