dev-util-3.10/glade: Update bdeps

--- a/packages/atoms/base-gnome2/dev-util-3.10/glade/build.yaml
+++ b/packages/atoms/base-gnome2/dev-util-3.10/glade/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: gnome-common
+- name: geocode-glib
   version: '>=0'
-  category: gnome-base-3
+  category: sci-geosciences
