net-libs/gnome-online-accounts: Bump v.3.36.0+1

--- a/packages/atoms/base-gnome2/net-libs/gnome-online-accounts/definition.yaml
+++ b/packages/atoms/base-gnome2/net-libs/gnome-online-accounts/definition.yaml
@@ -1,9 +1,10 @@
 name: gnome-online-accounts
-version: 3.36.0
+version: 3.36.0+1
 category: net-libs
 use_flags:
 - -kerberos
 - introspection
+- vala
 requires:
 - name: libsecret
   version: '>=0'
