x11-libs/colord-gtk: Bump v.0.1.26+1

--- a/packages/atoms/base-gnome2/x11-libs/colord-gtk/definition.yaml
+++ b/packages/atoms/base-gnome2/x11-libs/colord-gtk/definition.yaml
@@ -1,10 +1,10 @@
 name: colord-gtk
-version: 0.1.26
+version: 0.1.26+1
 category: x11-libs
 use_flags:
 - -doc
+- -vala
 - introspection
-- vala
 requires:
 - name: gdk-pixbuf
   version: '>=0'
