--- a/packages/atoms/base-gnome2/media-video/cheese/definition.yaml
+++ b/packages/atoms/base-gnome2/media-video/cheese/definition.yaml
@@ -1,5 +1,5 @@
 name: cheese
-version: 3.34.0
+version: "44.1"
 category: media-video
 use_flags:
 - -test
@@ -71,4 +71,4 @@ labels:
   kit: gnome-kit
   original.package.name: media-video/cheese
   original.package.slot: "0"
-  original.package.version: 3.34.0
+  original.package.version: "44.1"
