dev-libs-3/libnl: Bump v.3.4.0+2

--- a/packages/atoms/base-net/dev-libs-3/libnl/definition.yaml
+++ b/packages/atoms/base-net/dev-libs-3/libnl/definition.yaml
@@ -1,5 +1,5 @@
 name: libnl
-version: 3.4.0+1
+version: 3.4.0+2
 category: dev-libs-3
 use_flags:
 - -python_targets_python2_7
@@ -8,6 +8,7 @@ use_flags:
 - -python_targets_python3_8
 - python
 - python_targets_python3_9
+- tools
 requires:
 - name: python
   version: '>=0'
