--- a/packages/atoms/base-net/dev-libs-3/libnl/definition.yaml
+++ b/packages/atoms/base-net/dev-libs-3/libnl/definition.yaml
@@ -1,5 +1,5 @@
 name: libnl
-version: 3.4.0+2
+version: 3.4.0+3
 category: dev-libs-3
 use_flags:
 - -python_targets_python2_7
@@ -8,7 +8,7 @@ use_flags:
 - -python_targets_python3_8
 - python
 - python_targets_python3_9
-- tools
+- utils
 requires:
 - name: python
   version: '>=0'
