gnome-extra/nm-applet: Bump v.1.18.0+1

--- a/packages/atoms/base-gnome3/gnome-extra/nm-applet/definition.yaml
+++ b/packages/atoms/base-gnome3/gnome-extra/nm-applet/definition.yaml
@@ -1,20 +1,17 @@
 name: nm-applet
-version: 1.18.0
+version: 1.18.0+1
 category: gnome-extra
 use_flags:
 - -gnome-keyring
 - -selinux
+- -teamd
 - ayatana
 - modemmanager
 - policykit
-- teamd
 requires:
 - name: libsecret
   version: '>=0'
   category: app-crypt
-- name: jansson
-  version: '>=0'
-  category: dev-libs
 - name: libappindicator
   version: '>=0'
   category: dev-libs-3
