--- a/packages/atoms/base-gnome3/gnome-extra/nm-applet/build.yaml
+++ b/packages/atoms/base-gnome3/gnome-extra/nm-applet/build.yaml
@@ -1,4 +1,6 @@
 prelude:
+# TEMPORARY to get libnl[utils]
+- luet repo update && luet -y upgrade && luet cleanup
 - |-
   export FEATURES="-sandbox -usersandbox -ipc-sandbox -pid-sandbox -network-sandbox" && \
   export JOBS={{ ( index .Values.labels "jobs" ) | default "3" }} && \
