app-text-2/enchant: Bump v.2.5.0+1

--- a/packages/atoms/base-gnome3/app-text-2/enchant/definition.yaml
+++ b/packages/atoms/base-gnome3/app-text-2/enchant/definition.yaml
@@ -1,16 +1,13 @@
 name: enchant
-version: 2.5.0
+version: 2.5.0+1
 category: app-text-2
 use_flags:
+- -aspell
+- -nuspell
 - -test
-- aspell
+- -voikko
 - hunspell
-- nuspell
-- voikko
 requires:
-- name: aspell
-  version: '>=0'
-  category: app-text
 - name: hunspell
   version: '>=0'
   category: app-text
