x11-wm/mutter: Bump v.3.36.7+1

--- a/packages/atoms/base-gnome3/x11-wm/mutter/definition.yaml
+++ b/packages/atoms/base-gnome3/x11-wm/mutter/definition.yaml
@@ -1,5 +1,5 @@
 name: mutter
-version: 3.36.7
+version: 3.36.7+1
 category: x11-wm
 use_flags:
 - -test
@@ -11,6 +11,7 @@ use_flags:
 - remote-desktop
 - udev
 - wayland
+- elogind
 requires:
 - name: atk
   version: '>=0'
