--- a/packages/atoms/base-gnome3/gnome-extra/evolution-data-server/build.yaml
+++ b/packages/atoms/base-gnome3/gnome-extra/evolution-data-server/build.yaml
@@ -1,4 +1,6 @@
 prelude:
+# temporary fix to get new build of libical
+- luet repo update && luet upgrade -y && luet cleanup
 - |-
   export FEATURES="-sandbox -usersandbox -ipc-sandbox -pid-sandbox -network-sandbox" && \
   export JOBS={{ ( index .Values.labels "jobs" ) | default "3" }} && \
