mail-client-2.0/evolution: Bump v.3.36.5+1

--- a/packages/atoms/base-gnome3/mail-client-2.0/evolution/build.yaml
+++ b/packages/atoms/base-gnome3/mail-client-2.0/evolution/build.yaml
@@ -1,4 +1,8 @@
 prelude:
+# Macaroni uses a splitted version of pinentry
+- ->
+  sed -i -e 's|^PINENTRY_DEPEND=.*|PINENTRY_DEPEND="app-crypt/pinentry"|g'
+  /var/git/meta-repo/kits/gnome-kit/mail-client/evolution/evolution-*.ebuild
 - |-
   export FEATURES="-sandbox -usersandbox -ipc-sandbox -pid-sandbox -network-sandbox" && \
   export JOBS={{ ( index .Values.labels "jobs" ) | default "3" }} && \
