app-eselect/eselect-pinentry: Add missing requires

--- a/packages/atoms/base-gnome/app-eselect/eselect-pinentry/definition.yaml
+++ b/packages/atoms/base-gnome/app-eselect/eselect-pinentry/definition.yaml
@@ -1,6 +1,10 @@
 name: eselect-pinentry
 version: 0.7.2
 category: app-eselect
+requires:
+- name: eselect-lib-bin-symlink
+  version: '>=0'
+  category: app-eselect
 annotations:
   subsets:
     rules:
