mail-filter/bogofilter: Bump v.1.2.4+1

--- a/packages/atoms/base-gnome3/mail-filter/bogofilter/definition.yaml
+++ b/packages/atoms/base-gnome3/mail-filter/bogofilter/definition.yaml
@@ -1,17 +1,14 @@
 name: bogofilter
-version: 1.2.4
+version: 1.2.4+1
 category: mail-filter
 use_flags:
+- -sqlite
 - -tokyocabinet
 - berkdb
-- sqlite
 requires:
 - name: pax
   version: '>=0'
   category: app-arch
-- name: sqlite
-  version: '>=0'
-  category: dev-db-3
 - name: gsl
   version: '>=0'
   category: sci-libs
