mail-client-2.0/evolution: Update rdeps

--- a/packages/atoms/base-gnome3/mail-client-2.0/evolution/definition.yaml
+++ b/packages/atoms/base-gnome3/mail-client-2.0/evolution/definition.yaml
@@ -33,12 +33,18 @@ requires:
 - name: libchamplain
   version: '>=0'
   category: media-libs-0.12
+- name: webkit-gtk
+  version: '>=0'
+  category: net-libs-4
 - name: libcryptui
   version: '>=0'
   category: x11-libs
 - name: mx
   version: '>=0'
   category: x11-libs-1.0
+- name: pinentry-gnome
+  version: '>=0'
+  category: app-crypt
 annotations:
   subsets:
     rules:
