toolchain/base-gnome: Update rdeps

--- a/packages/toolchain/base-gnome/definition.yaml
+++ b/packages/toolchain/base-gnome/definition.yaml
@@ -3,6 +3,9 @@ name: base-gnome
 version: "1"
 description: "Virtul package to install portage meta data of the base-gnome packages"
 requires:
+  - name: eselect-lib-bin-symlink
+    category: app-eselect
+    version: '>=0'
   - name: eselect-pinentry
     category: app-eselect
     version: '>=0'
