--- a/packages/atoms/base-net2/dev-python/hyperframe/build.yaml
+++ b/packages/atoms/base-net2/dev-python/hyperframe/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: hpack
+- name: macaroni-funtoo-race14
   version: '>=0'
-  category: dev-python
+  category: seed
