portage-converter/xorg-base: Add dev-cpp-cairomm:1

--- a/portage-converter/xorg-base.yml
+++ b/portage-converter/xorg-base.yml
@@ -333,6 +333,7 @@ artefacts:
     - svg
   packages:
   - dev-cpp/cairomm:0
+  - dev-cpp/cairomm:1
 
 - tree: packages/atoms/xorg-base
   mutations:
