toolchain/xorg-base: Update rdeps

--- a/packages/toolchain/xorg-base/definition.yaml
+++ b/packages/toolchain/xorg-base/definition.yaml
@@ -16,6 +16,9 @@ requires:
     category: app-text
     version: '>=0'
   - name: cairomm
+    category: dev-cpp-1
+    version: '>=0'
+  - name: cairomm
     category: dev-cpp
     version: '>=0'
   - name: libsigc++
