dev-cpp/cairomm: Bump v.1.12.2+3

--- a/packages/atoms/xorg-base/dev-cpp/cairomm/definition.yaml
+++ b/packages/atoms/xorg-base/dev-cpp/cairomm/definition.yaml
@@ -1,5 +1,5 @@
 name: cairomm
-version: 1.12.2+2
+version: 1.12.2+3
 category: dev-cpp
 use_flags:
 - -doc
@@ -29,8 +29,8 @@ labels:
     x11-misc/shared-mime-info'
   IUSE: aqua doc +svg X
   RDEPEND: '>=x11-libs/cairo-1.16.0[aqua=,svg=,X=] dev-libs/libsigc++:2= >=dev-libs/libsigc++-2.5.1:2'
-  emerge.packages: dev-cpp/cairomm
+  emerge.packages: dev-cpp/cairomm:0
   kit: gnome-kit
-  original.package.name: dev-cpp/cairomm:0
+  original.package.name: dev-cpp/cairomm
   original.package.slot: "0"
   original.package.version: 1.12.2-r1
