--- a/packages/atoms/nvidia/dev-libs/ocl-icd/build.yaml
+++ b/packages/atoms/nvidia/dev-libs/ocl-icd/build.yaml
@@ -1,4 +1,6 @@
 prelude:
+# Need ruby
+- eselect ruby set 1 && macaronictl env-update
 - |-
   export FEATURES="-sandbox -usersandbox -ipc-sandbox -pid-sandbox -network-sandbox" && \
   export JOBS={{ ( index .Values.labels "jobs" ) | default "3" }} && \
