virtual/mta: Use virtual/mta-service as require

--- a/packages/atoms/base-net2/virtual/mta/definition.yaml
+++ b/packages/atoms/base-net2/virtual/mta/definition.yaml
@@ -2,9 +2,9 @@ name: mta
 version: "1"
 category: virtual
 requires:
-- name: nullmailer
+- name: mta-service
   version: '>=0'
-  category: mail-mta
+  category: virtual
 annotations:
   subsets:
     rules:
