mail-mta/postfix: Add provides virtual/mta-service

--- a/packages/atoms/base-net2/mail-mta/postfix/definition.yaml
+++ b/packages/atoms/base-net2/mail-mta/postfix/definition.yaml
@@ -39,6 +39,10 @@ requires:
 - name: pam
   version: '>=0'
   category: sys-libs
+provides:
+- name: mta-service
+  version: '>=0'
+  category: virtual
 annotations:
   subsets:
     rules:
