--- a/packages/atoms/base-net2/mail-mta/nullmailer/definition.yaml
+++ b/packages/atoms/base-net2/mail-mta/nullmailer/definition.yaml
@@ -14,6 +14,10 @@ requires:
 - name: shadow
   version: '>=0'
   category: virtual
+provides:
+- name: mta-service
+  version: '>=0'
+  category: virtual
 annotations:
   subsets:
     rules:
