net-mail/dovecot: Fix finalize

--- a/packages/atoms/base-net2/net-mail/dovecot/finalize.yaml
+++ b/packages/atoms/base-net2/net-mail/dovecot/finalize.yaml
@@ -2,4 +2,4 @@ shell:
 - /bin/bash
 - -c
 install:
-- entities merge --specs-dir /usr/share/macaroni/entities/ -e postfix || true
+- entities merge --specs-dir /usr/share/macaroni/entities/ -e dovecot || true
